# skills

./: .gitignore  ai_investment_sop.md
analysis/: CN-FF实施报告_20260509.md  CoreWeave_Q1_2026_交叉验证.md  ETF技术面定锚_20260508.md  Finance_Skills综述与债券SOP_20260509.md  P1升级实施报告_20260509.md  SOP商业化评估_20260507.md  cn_ff_results_20260509.json  etf_technical_20260508.json  hstech_factor_analysis.py  半导体专题_NVIDIA物理极限_20260507.md  (+3 more)
scripts/writing/seedance/: .env.example  ENV.md  LOGIC_VALIDATION.md  PIPELINE_INTEGRATION.md  README.md  inkos.json  main.py  poc.md  pyproject.toml  run_fengchao.py
scripts/writing/seedance/.trae/skills/: action-cinematography.md  character-designer.md  director.md  scriptwriter.md  seedance-prompt-engineer.md
scripts/writing/seedance/agents/: __init__.py  action_design.py  character_design.py  director.py  llm_client.py  prompt_engineer.py  screenplay.py  seedance_system.py
scripts/writing/seedance/books/测试/: book.json
scripts/writing/seedance/books/测试书/: book.json
scripts/writing/seedance/books/蜂巢/: book.json
scripts/writing/seedance/books/蜂巢/story/: book_rules.md  current_state.md  pending_hooks.md  story_bible.md  volume_outline.md
scripts/writing/seedance/converters/: __init__.py
scripts/writing/seedance/extractors/: __init__.py  novel_extractor.py
scripts/writing/seedance/novel_gen/: characters_prompts.md  characters_prompts_en.md  content.md  outline.md  storyboard_chapter01_prompts.md
scripts/writing/seedance/orchestrator/: __init__.py  core.py  schema.py
scripts/writing/seedance/orchestrator/clients/: __init__.py  inkos_client.py
(+52 files in other folders)
