[project]
name = "creative-pipeline"
version = "0.1.0"
description = "InkOS + Seedance Creative Pipeline - 从灵感到小说/短剧的自动化创作系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
